--- a/KopiPedia/nusantara.html
+++ b/KopiPedia/nusantara.html
@@ -11,10 +11,16 @@
 <body>
     <div class="container_menu">
         <a href="index.html">
-        <h1>KOPIKUKAUKITA</h1>
+            <img src="images/logo.png" alt="">
         </a>
+        <div class="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
     </div>
     <div class="container_secondary_menu">
+        <div>
         <a href="nusantara.html">
         <h3>Nusantara Beans</h3>
         </a>
@@ -27,6 +33,7 @@
         <a href="">
         <h3>Contact Us</h3>
         </a>
+    </div>
     </div>
     <div class="container_header_jumbotron">
         <div class="container_jumbotron">
@@ -77,7 +84,7 @@
                     <br>
                     <div class="desc_content_1">
                         <img src="images/manualbrew.jpg" alt="">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis doloribus nam impedit aperiam deleniti maxime voluptate a minima, quos ducimus magnam voluptatibus adipisci. Veritatis modi consequatur velit quis odio culpa.Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis doloribus nam impedit aperiam deleniti maxime voluptate a minima, quos ducimus magnam voluptatibus adipisci. Veritatis modi consequatur velit quis odio culpa.Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis doloribus nam impedit aperiam deleniti maxime voluptate a minima, quos ducimus magnam voluptatibus adipisci. Veritatis modi consequatur velit quis odio culpa.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis doloribus nam impedit aperiam deleniti maxime voluptate a minima, quos ducimus magnam voluptatibus adipisci. Veritatis modi consequatur velit quis odio culpa..</p>
                     </div>
                 </div>
                 <div class="content two">
@@ -86,7 +93,7 @@
                     <br>
                     <div class="desc_content_1">
                         <img src="images/manualbrew.jpg" alt="">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis doloribus nam impedit aperiam deleniti maxime voluptate a minima, quos ducimus magnam voluptatibus adipisci. Veritatis modi consequatur velit quis odio culpa.Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis doloribus nam impedit aperiam deleniti maxime voluptate a minima, quos ducimus magnam voluptatibus adipisci. Veritatis modi consequatur velit quis odio culpa.Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis doloribus nam impedit aperiam deleniti maxime voluptate a minima, quos ducimus magnam voluptatibus adipisci. Veritatis modi consequatur velit quis odio culpa.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis doloribus nam impedit aperiam deleniti maxime voluptate a minima, quos ducimus magnam voluptatibus adipisci. Veritatis modi consequatur velit quis odio culpa.</p>
                     </div>
                 </div>
                 <div class="content three">
@@ -95,7 +102,7 @@
                     <br>
                     <div class="desc_content_1">
                         <img src="images/manualbrew.jpg" alt="">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis doloribus nam impedit aperiam deleniti maxime voluptate a minima, quos ducimus magnam voluptatibus adipisci. Veritatis modi consequatur velit quis odio culpa.Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis doloribus nam impedit aperiam deleniti maxime voluptate a minima, quos ducimus magnam voluptatibus adipisci. Veritatis modi consequatur velit quis odio culpa.Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis doloribus nam impedit aperiam deleniti maxime voluptate a minima, quos ducimus magnam voluptatibus adipisci. Veritatis modi consequatur velit quis odio culpa.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis doloribus nam impedit aperiam deleniti maxime voluptate a minima, quos ducimus magnam voluptatibus adipisci. Veritatis modi consequatur velit quis odio culpa..</p>
                     </div>
                 </div>
             </div>
@@ -166,6 +173,7 @@
     <div class="container_footer">
         
     </div>
+    <script src="burger.js"></script>
     <script src="nusantara.js"></script>
 </body>
 </html>
