--- a/KopiPedia/coffeeshopbandung.html
+++ b/KopiPedia/coffeeshopbandung.html
@@ -4,16 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/coffeeshopbandung.css">
     <title>Document</title>
 </head>
 <body>
     <div class="container_menu">
         <a href="index.html">
-        <h1>KOPIKUKAUKITA</h1>
+        <img src="images/logo.png" alt="">
         </a>
+        <div class="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
     </div>
     <div class="container_secondary_menu">
+        <div>
         <a href="nusantara.html">
         <h3>Nusantara Beans</h3>
         </a>
@@ -21,11 +28,12 @@
         <h3>Kopipedia</h3>
         </a>
         <a href="coffeeshopbandung.html">
-        <h3>Coffeeshop Bandung</h3>
+        <h3>Coffee Shop Bandung</h3>
         </a>
         <a href="">
         <h3>Contact Us</h3>
         </a>
+    </div>
     </div>
     <div class="carousel_container">
         <i class="fas fa-arrow-left" id="prevBtn"></i>
@@ -74,7 +82,7 @@
                     <br>
                     <div class="desc_content_1">
                         <img src="images/manualbrew.jpg" alt="">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis doloribus nam impedit aperiam deleniti maxime voluptate a minima, quos ducimus magnam voluptatibus adipisci. Veritatis modi consequatur velit quis odio culpa.Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis doloribus nam impedit aperiam deleniti maxime voluptate a minima, quos ducimus magnam voluptatibus adipisci. Veritatis modi consequatur velit quis odio culpa.Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis doloribus nam impedit aperiam deleniti maxime voluptate a minima, quos ducimus magnam voluptatibus adipisci. Veritatis modi consequatur velit quis odio culpa.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis doloribus nam impedit aperiam deleniti maxime voluptate a minima, quos ducimus magnam voluptatibus adipisci. Veritatis modi consequatur velit quis odio culpa.</p>
                     </div>
                 </div>
                 <div class="content two">
@@ -83,7 +91,7 @@
                     <br>
                     <div class="desc_content_1">
                         <img src="images/manualbrew.jpg" alt="">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis doloribus nam impedit aperiam deleniti maxime voluptate a minima, quos ducimus magnam voluptatibus adipisci. Veritatis modi consequatur velit quis odio culpa.Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis doloribus nam impedit aperiam deleniti maxime voluptate a minima, quos ducimus magnam voluptatibus adipisci. Veritatis modi consequatur velit quis odio culpa.Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis doloribus nam impedit aperiam deleniti maxime voluptate a minima, quos ducimus magnam voluptatibus adipisci. Veritatis modi consequatur velit quis odio culpa.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis doloribus nam impedit aperiam deleniti maxime voluptate a minima, quos ducimus magnam voluptatibus adipisci. Veritatis modi consequatur velit quis odio culpa.</p>
                     </div>
                 </div>
             </div>
@@ -151,6 +159,7 @@
             </div>
         </div>
     </div>
+    <script src="burger.js"></script>
     <script src="nusantara.js"></script>
 </body>
 </html>
