--- a/KopiPedia/kopipedia.html
+++ b/KopiPedia/kopipedia.html
@@ -11,10 +11,16 @@
 <body>
     <div class="container_menu">
         <a href="index.html">
-            <h1>KOPIKUKAUKITA</h1>
-        </a>
+        <img src="images/logo.png" alt="">
+    </a>
+        <div class="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
     </div>
     <div class="container_secondary_menu">
+        <div>
         <a href="nusantara.html">
         <h3>Nusantara Beans</h3>
         </a>
@@ -22,11 +28,12 @@
         <h3>Kopipedia</h3>
         </a>
         <a href="coffeeshopbandung.html">
-        <h3>Coffeeshop Bandung</h3>
+        <h3>Coffee Shop Bandung</h3>
         </a>
         <a href="">
         <h3>Contact Us</h3>
         </a>
+    </div>
     </div>
     <div class="carousel_container">
         <i class="fas fa-arrow-left" id="prevBtn"></i>
@@ -74,7 +81,7 @@
                 <br>
                 <div class="desc_content_1">
                     <img src="images/manualbrew.jpg" alt="">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis doloribus nam impedit aperiam deleniti maxime voluptate a minima, quos ducimus magnam voluptatibus adipisci. Veritatis modi consequatur velit quis odio culpa.Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis doloribus nam impedit aperiam deleniti maxime voluptate a minima, quos ducimus magnam voluptatibus adipisci. Veritatis modi consequatur velit quis odio culpa.Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis doloribus nam impedit aperiam deleniti maxime voluptate a minima, quos ducimus magnam voluptatibus adipisci. Veritatis modi consequatur velit quis odio culpa.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis doloribus nam impedit aperiam deleniti maxime voluptate a minima, quos ducimus magnam voluptatibus adipisci. Veritatis modi consequatur velit quis odio culpa.Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
             </div>
             <div class="content two">
@@ -83,7 +90,7 @@
                 <br>
                 <div class="desc_content_1">
                     <img src="images/manualbrew.jpg" alt="">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis doloribus nam impedit aperiam deleniti maxime voluptate a minima, quos ducimus magnam voluptatibus adipisci. Veritatis modi consequatur velit quis odio culpa.Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis doloribus nam impedit aperiam deleniti maxime voluptate a minima, quos ducimus magnam voluptatibus adipisci. Veritatis modi consequatur velit quis odio culpa.Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis doloribus nam impedit aperiam deleniti maxime voluptate a minima, quos ducimus magnam voluptatibus adipisci. Veritatis modi consequatur velit quis odio culpa.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis doloribus nam impedit aperiam deleniti maxime voluptate a minima, quos ducimus magnam voluptatibus adipisci. Veritatis modi consequatur velit quis odio culpa.Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
             </div>
         </div>
@@ -154,6 +161,7 @@
     <div class="container_footer">
         
     </div>
+    <script src="burger.js"></script>
     <script src="nusantara.js"></script>
 </body>
 </html>
